@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 - phodevi: Fix for memory reporting on OS X
+- phodevi: Improved LLVM Clang compiler version detection with modern Apple Xcode
 
 Phoronix Test Suite 4.4.1-Forsand
 14 March 2013
